KIBON-2767: Review: Add Flag to indicate RquriedAge for Anspruch is not reached and set Anspruch to Zero only in ReduktionsRegel